added meme generator

--- a/meteo.html
+++ b/meteo.html
@@ -23,6 +23,6 @@
         <img id="icone-temps" src="" alt="" style="display:none;">
     </div>
 
-    <script src="script.js"></script>
+    <script src="meteo.js"></script>
 </body>
 </html>
